users login finished

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    this is dash board.
+    about user<hr>
+    username is <%- user.username %><br>
+    your name is <%- user.fname %> <%- user.lname %><br>
+    
 </body>
 </html>
