--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,38 +8,16 @@
     <title>Document</title>
 </head>
 
-<style>
-    .flex-container {
-        display: flex;
-        flex-wrap: wrap;
-        background-color: DodgerBlue;
-    }
 
-    .flex-container>div {
-        background-color: #f1f1f1;
-        width: 500px;
-        margin: 10px;
-        border-radius: 30px;
-        text-align: center;
-        line-height: 75px;
-        font-size: 30px;
-    }
-</style>
+
 
 <body>
     about user<br>
     username is <%- data.user.username %><br>
-        your name is <%- data.user.fname %> <%- data.user.lname %><br>
+    your name is <%- data.user.fname %> <%- data.user.lname %><br>
     <hr>
-    <div class="flex-container">
-        <% data.tools.forEach(tool => { %>
-            <div>
-                <img src="<%- tool.photo_url %>" alt="tool.name" width="300px"><hr>
-                name : <%- tool.name %><br>
-                amount : <%- tool.amount %>
-            </div>
-        <% }) %>
-    </div>
+    <a href="/user/borrow">ยืมของเพิ่ม</a>            
+                
 
 
 </body>
