--- a/views/borrow.ejs
+++ b/views/borrow.ejs
@@ -16,7 +16,7 @@
 
     .flex-container>div {
         background-color: rgb(199, 227, 255);
-        width: 500px;
+        width: 450px;
         margin: 10px;
         border-radius: 30px;
         text-align: center;
@@ -29,21 +29,19 @@
 
 <body>
     ยืมอุปกรณ์
+    <form action="" method="post">
     <div class="flex-container">
-        <form action="" method="post">
-
-            <% data.tools.forEach(tool=> { %>
-                <div>
-                    <img src="<%- tool.photo_url %>" alt="tool.name" width="300px">
-                    <hr>
-                    name : <%- tool.name %><br>
-                        amount : <%- tool.amount %>
-                </div>
-                
+        <% data.tools.forEach(tool=> { %>
+            <div>
+                <img src="<%- tool.photo_url %>" alt="tool.name" width="300px"><br>
+                name : <%- tool.name %><br>
+                amount : <%- tool.amount %><br>
+                <input type="number" name="<%- tool._id %>" placeholder="0" max="<%- tool.amount %>" min="0">    
+            </div>
             <% }) %>
-            
-        </form>
-    </div>
+        </div>
+        <input type="submit" value="ยืนยัน" style="font-size: 50px;border-radius: 20px; margin: 10px; padding: 10px;">
+    </form>
 
 </body>
 
