can not get borrowed item

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,7 +17,8 @@
     your name is <%- data.user.fname %> <%- data.user.lname %><br>
     <hr>
     <a href="/user/borrow">ยืมของเพิ่ม</a>            
-                
+    <hr>
+    <%- data.borrowed %>
 
 </body>
 
