--- a/views/borrow.ejs
+++ b/views/borrow.ejs
@@ -36,7 +36,7 @@
                 <img src="<%- tool.photo_url %>" alt="tool.name" width="300px"><br>
                 name : <%- tool.name %><br>
                 amount : <%- tool.amount %><br>
-                <input type="number" name="<%- tool._id %>" placeholder="0" max="<%- tool.amount %>" min="0">    
+                <input type="number" name="<%- tool._id %>" value="0" max="<%- tool.amount %>" min="0">    
             </div>
             <% }) %>
         </div>
