--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -22,7 +22,8 @@
     <% data.borroweds.forEach(item => { %>
         <%- item.toolName %> จำนวน <%- item.amount %><br>
     <% }) %>
-
+<hr>
+<a href="/user/returnitem" >คืนของ</a>
 </body>
 
 </html>
