--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -19,7 +19,7 @@
             <input type="password" name="password" id="password" placeholder="Enter Password">
         </div>
         <input type="submit" value="Login">
-        <a href="/admin">log in as admin</a>
+        <a href="/">login as user</a>
     </form>
 </body>
 </html>
