create skeleton for setting user

--- a/views/adminboard.ejs
+++ b/views/adminboard.ejs
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="/logout">logout</a><br>
     this is admin 's dashboard
+    <a href="/setting_users">setting_users</a><br>
+    <a href="/setting_tools">setting_tools</a><br>
+
 </body>
 </html>
