--- a/views/setting_user.ejs
+++ b/views/setting_user.ejs
@@ -7,6 +7,7 @@
     <title>setting user</title>
 </head>
 <style>
+
     .flex-container {
         display: flex;
         flex-wrap: wrap;
@@ -23,8 +24,13 @@
         border: 1px solid;
         box-shadow: 5px 10px #008bbd;
     }
+
 </style>
 <body>
-    <a href="/user/cerate">create new user</a>
+    <div class="flex-container">
+        <div><a href="/user/cerate">create new user</a></div>
+        
+    </div>
+
 </body>
 </html>
