--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="adminlogin.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +10,13 @@
     <link rel="stylesheet" href="app.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
+
+<body>
+    <h1>โปรเเกรมยืมคืนอุปกรณ์</h1>
+</body>
 <body>
     <form action="/login/admin" method="post">
-        <h2>admin only!!!!!!!!!!!!</h2>
+        <h2>Admin login</h2>
         <div class="input-field">
             <input type="text" name="username" id="username" placeholder="Enter Username">
         </div>
