--- a/views/adminboard.ejs
+++ b/views/adminboard.ejs
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="adminboard.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <a href="/setting_users">setting users</a><br>
+    <a href="/setting_tools">setting tools</a><br>
     <a href="/logout">logout</a><br>
-    this is admin 's dashboard
-    <a href="/setting_users">setting_users</a><br>
-    <a href="/setting_tools">setting_tools</a><br>
-
 </body>
 </html>
