--- a/public/createuser.css
+++ b/public/createuser.css
@@ -1,4 +1,3 @@
-/* Set a background color for the whole page */
 body {
     background-color: #f5f5f5;
   }
@@ -13,17 +12,15 @@ body {
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   }
   
-  /* Style the form inputs */
   input[type="text"], input[type="password"] {
     width: 100%;
     padding: 10px;
-    margin-bottom: 15px;
+    margin-top: 15px;
     border: none;
     border-radius: 5px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   }
   
-  /* Style the submit button */
   input[type="submit"] {
     background-color: #4CAF50;
     color: white;
