--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -6,15 +6,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Create User</title>
 </head>
 <body>
     <form action="/user/cerate" method="post">
-        <input type="text" name="username" placeholder="username">
-        <input type="text" name="password" placeholder="password">
-        <input type="text" name="fname" placeholder="firstname">
-        <input type="text" name="lname" placeholder="lastname">
-        <input type="submit" value="submit">
+        <h1>Create User</h1>
+        <input type="text" name="username" placeholder="Username">
+        <input type="password" name="password" placeholder="Password">
+        <input type="text" name="fname" placeholder="First Name">
+        <input type="text" name="lname" placeholder="Last Name">
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
