--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -5,16 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create User</title>
+  <title>Create User</title>
 </head>
 <body>
-    <form action="/user/cerate" method="post">
-        <h1>Create User</h1>
-        <input type="text" name="username" placeholder="Username">
-        <input type="password" name="password" placeholder="Password">
-        <input type="text" name="fname" placeholder="First Name">
-        <input type="text" name="lname" placeholder="Last Name">
-        <input type="submit" value="Submit">
+  <header>
+    <h1>Create User</h1>
+  </header>
+  <main>
+    <form action="/user/create" method="post">
+      <label for="username">Username:</label>
+      <input type="text" name="username" id="username" placeholder="Enter your username">
+      <label for="password">Password:</label>
+      <input type="password" name="password" id="password" placeholder="Enter your password">
+      <label for="fname">First Name:</label>
+      <input type="text" name="fname" id="fname" placeholder="Enter your first name">
+      <label for="lname">Last Name:</label>
+      <input type="text" name="lname" id="lname" placeholder="Enter your last name">
+      <button type="submit">Submit</button>
     </form>
+  </main>
 </body>
 </html>
