เพิ่มปุ่มlogout หน้า Create User

--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="createuser.css">
+    <link rel="stylesheet" href="/createuser.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Create User</title>
-</head>
+</head> 
 <body>
   <header>
     <h1>Create User</h1>
@@ -22,6 +22,7 @@
       <label for="lname">Last Name:</label>
       <input type="text" name="lname" id="lname" placeholder="Enter your last name">
       <button type="submit">Submit</button>
+      <button class="logout" onclick="location.href='/logout'">Logout</button>
     </form>
   </main>
 </body>
