--- a/public/createuser.css
+++ b/public/createuser.css
@@ -2,7 +2,7 @@ body {
     background-color: #f2f2f2;  }
   
   header {
-    background-color: #333;
+    background-color: #0056b3;
     color: #fff;
     text-align: center;
     padding: 20px;
@@ -18,7 +18,7 @@ body {
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    box-shadow: 0 0 10px #0056b3;
   }
   
   label {
@@ -52,7 +52,7 @@ body {
     margin-top: 20px;
     border: none;
     border-radius: 5px;
-    background-color: #333;
+    background-color: #0056b3;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
@@ -62,3 +62,20 @@ body {
   button[type="submit"]:hover {
     background-color: #555;
   }
+
+
+button.logout {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    background-color: #0056b3;
+    color: #fff;
+    border-radius: 4px;
+    border: none;
+}
+
+button.logout:hover {
+    background-color: #007fff;
+    cursor: pointer;
+}
