--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/createuser.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Create User</title>
-</head> 
+     <link rel="stylesheet" href="/createuser.css">
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Create User</title>
+</head>
 <body>
-  <header>
-    <h1>Create User</h1>
-  </header>
-  <main>
-    <form action="/user/create" method="post">
-      <label for="username">Username:</label>
-      <input type="text" name="username" id="username" placeholder="Enter your username">
-      <label for="password">Password:</label>
-      <input type="password" name="password" id="password" placeholder="Enter your password">
-      <label for="fname">First Name:</label>
-      <input type="text" name="fname" id="fname" placeholder="Enter your first name">
-      <label for="lname">Last Name:</label>
-      <input type="text" name="lname" id="lname" placeholder="Enter your last name">
-      <button type="submit">Submit</button>
-      <button class="logout" onclick="location.href='/logout'">Logout</button>
-    </form>
-  </main>
+   <header>
+     <h1>Create User</h1>
+   </header>
+   <main>
+     <form action="/user/create" method="post">
+       <label for="username">Username:</label>
+       <input type="text" name="username" id="username" placeholder="Enter your username">
+       <label for="password">Password:</label>
+       <input type="password" name="password" id="password" placeholder="Enter your password">
+       <label for="fname">First Name:</label>
+       <input type="text" name="fname" id="fname" placeholder="Enter your first name">
+       <label for="lname">Last Name:</label>
+       <input type="text" name="lname" id="lname" placeholder="Enter your last name">
+       <button type="submit">Submit</button>
+     </form>
+   </main>
+   <footer>
+     <a href="/logout" class="logout-btn">Logout</a>
+   </footer>
 </body>
 </html>
