เเก้ไขหน้าcreateuserให้ต้องกรอกให้หมดถึงsubmitได้

--- a/views/setting_user.ejs
+++ b/views/setting_user.ejs
@@ -48,10 +48,10 @@
          <% data.users.forEach(user => { %>
              <div>
 
-                 id=<%- user._id %><br>
-                 username=<%- user.username %><br>
-                 password=<%- user.password %><br>
-                 name=<%- user.fname %>_<%- user.lname %><br>
+                 id: <%- user._id %><br>
+                 username: <%- user.username %><br>
+                 password: <%- user.password %><br>
+                 name: <%- user.fname %> <%- user.lname %><br>
 
 
              </div>
