--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -14,13 +14,13 @@
    <main>
      <form action="/user/create" method="post">
        <label for="username">Username:</label>
-       <input type="text" name="username" id="username" placeholder="Enter your username">
+       <input type="text" name="username" id="username" placeholder="Enter your username" required>
        <label for="password">Password:</label>
-       <input type="password" name="password" id="password" placeholder="Enter your password">
+       <input type="password" name="password" id="password" placeholder="Enter your password" required>
        <label for="fname">First Name:</label>
-       <input type="text" name="fname" id="fname" placeholder="Enter your first name">
+       <input type="text" name="fname" id="fname" placeholder="Enter your first name" required>
        <label for="lname">Last Name:</label>
-       <input type="text" name="lname" id="lname" placeholder="Enter your last name">
+       <input type="text" name="lname" id="lname" placeholder="Enter your last name" required>
        <button type="submit">Submit</button>
      </form>
    </main>
