--- a/views/setting_user.ejs
+++ b/views/setting_user.ejs
@@ -43,7 +43,7 @@
 <body>
      <button class="logout" onclick="location.href='/logout'">Logout</button>
      <div class="flex-container">
-         <div><a href="/user/cerate">create new user</a></div>
+         <div><a href="/user/create">create new user</a></div>
 
          <% data.users.forEach(user => { %>
              <div>
