copycodeเเละปรับนิดหน่อย

--- a/views/setting_tools.ejs
+++ b/views/setting_tools.ejs
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>setting user</title>
+     <title>setting tools</title>
      <style>
          .flex-container {
              display: flex;
@@ -43,7 +43,7 @@
 <body>
      <button class="logout" onclick="location.href='/logout'">Logout</button>
      <div class="flex-container">
-         <div><a href="/user/create">create new user</a></div>
+         <div><a href="/tools/create">create new user</a></div>
 
          <% data.users.forEach(user => { %>
              <div>
