เเก้อะไรสักอย่าง จำไม่ได้

--- a/views/create_tools.ejs
+++ b/views/create_tools.ejs
@@ -5,11 +5,11 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Create User</title>
+   <title>Create Tools</title>
 </head>
 <body>
    <header>
-     <h1>Create User</h1>
+     <h1>Create Tools</h1>
    </header>
    <main>
      <form action="/tools/create" method="post">
