--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -25,7 +25,8 @@
      </form>
    </main>
    <footer>
-     <a href="/logout" class="logout-btn">Logout</a>
+     <button class="logout" onclick="location.href='/logout'">Logout</button>
+     <button class="back" onclick="location.href='/setting_users'">Back</button>
    </footer>
 </body>
 </html>
