--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <link rel="stylesheet" href="dashboard.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        a {
+            display: inline-block;
+            margin: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            color: #fff;
+            text-decoration: none;
+            background-color: #007bff;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+            transition: background-color 0.3s ease-in-out;
+        }
+
+        a:hover {
+            background-color: #0056b3;
+        }
+
+        .button-wrapper {
+            display: flex;
+            justify-content: center;
+        }
+    </style>
 </head>
-
-
-
-
 <body>
     about user<br>
     username is <%- data.user.username %><br>
     your name is <%- data.user.fname %> <%- data.user.lname %><br>
-    <hr>           
+               
     ของที่เรายืมอยู่<br>
     <% data.borroweds.forEach(item => { %>
         <%- item.toolName %> จำนวน <%- item.amount %><br>
     <% }) %>
-<hr>
-<a href="/user/borrow">ยืมของเพิ่ม</a> 
-<a href="/user/returnitem" >คืนของ</a>
-<a href="/logout" >logout</a>
+    <div class="button-wrapper">
+        <a href="/user/borrow">ยืมของเพิ่ม</a> 
+        <a href="/user/returnitem">คืนของ</a>
+        <a href="/logout">logout</a>
+    </div>
 </body>
-
 </html>
