--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="dashboard.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="dashboard.css">
+
     <style>
+        /* Styles for links */
         a {
             display: inline-block;
             margin: 10px;
@@ -18,30 +20,45 @@
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
             transition: background-color 0.3s ease-in-out;
         }
-
         a:hover {
             background-color: #0056b3;
         }
 
+        /* Styles for button wrapper */
         .button-wrapper {
             display: flex;
             justify-content: center;
         }
+
+        /* Styles for user info section */
+        .info {
+            text-align: center;
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin: 10px auto;
+            max-width: 500px;
+        }
+        .info h2 {
+            margin-top: 0;
+        }
     </style>
 </head>
 <body>
-    about user<br>
-    username is <%- data.user.username %><br>
-    your name is <%- data.user.fname %> <%- data.user.lname %><br>
-               
-    ของที่เรายืมอยู่<br>
-    <% data.borroweds.forEach(item => { %>
-        <%- item.toolName %> จำนวน <%- item.amount %><br>
-    <% }) %>
+    <div class="info">
+        <h2>About user</h2>
+        <p>Username is <%- data.user.username %></p>
+        <p>Your name is <%- data.user.fname %> <%- data.user.lname %></p>
+
+        <h2>Items you've borrowed</h2>
+        <% data.borroweds.forEach(item => { %>
+            <p><%- item.toolName %> Quantity: <%- item.amount %></p>
+        <% }) %>
+    </div>
+
     <div class="button-wrapper">
-        <a href="/user/borrow">ยืมของเพิ่ม</a> 
-        <a href="/user/returnitem">คืนของ</a>
-        <a href="/logout">logout</a>
+        <a href="/user/borrow">Borrow more items</a>
+        <a href="/user/returnitem">Return items</a>
+        <a href="/logout">Logout</a>
     </div>
 </body>
 </html>
