--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -33,3 +33,36 @@ body {
   li:hover {
     background-color: #f7f7f7;
   }
+
+  a {
+    display: inline-block;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    color: #fff;
+    text-decoration: none;
+    background-color: #007bff;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    transition: background-color 0.3s ease-in-out;
+}
+a:hover {
+    background-color: #0056b3;
+}
+
+.button-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.info {
+    text-align: center;
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 10px auto;
+    max-width: 500px;
+    background-color: #f2f2f2;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+.info h2 {
+    margin-top: 0;
+}
